Polish Tests
Issue gh-16771